--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,6 +14,7 @@
       justify-content: center;
       align-items: center;
       min-height: 100vh;
+      position: relative;
     }
     .bio-card {
       background: #1c1c1c;
@@ -59,9 +59,15 @@
     li {
       padding: 3px 0;
     }
+    audio {
+      width: 100%;
+      margin-top: 20px;
+    }
+
   </style>
 </head>
 <body>
+
   <div class="bio-card">
     <center>
       <img src="avatar.png" alt="winclearsky avatar" class="avatar">
@@ -97,6 +103,30 @@
         <li>Squad: <a href="https://dsc.gg/wlnmc" class="link">dsc.gg/wlnmc</a></li>
       </ul>
     </div>
+
+    <audio controls autoplay loop>
+      <source src="sound.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+    </audio>
   </div>
+
+  <!-- Полоса за мышкой -->
+  <div id="trail"></div>
+
+  <script>
+    const trail = document.getElementById("trail");
+    let hideTimeout;
+
+    document.addEventListener("mousemove", (e) => {
+      trail.style.left = `${e.pageX}px`;
+      trail.style.top = `${e.pageY}px`;
+      trail.style.opacity = 1;
+
+      clearTimeout(hideTimeout);
+      hideTimeout = setTimeout(() => {
+        trail.style.opacity = 0;
+      }, 1000);
+    });
+  </script>
 </body>
 </html>
