--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <body>
   <div class="bio-card">
     <center>
-      <img src="96b0e511-e418-4589-8c96-36f7a4ddddf9.png" alt="winclearsky avatar" class="avatar">
+      <img src="avatar.png" alt="winclearsky avatar" class="avatar">
       <h1>winclearsky</h1>
       <div class="subtitle">aka Илья | 13 y.o. | Russia</div>
     </center>
